# rivo

./: .gitignore  README.md  ideas.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  run.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/endpoints/: __init__.py  auth.py  properties.py  users.py  voice.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  email_template.py  property.py  property_image.py  user.py  voice_setting.py
backend/app/schemas/: __init__.py  email_template.py  property.py  property_image.py  user.py  voice_setting.py
backend/app/services/: google_auth.py  openai_service.py  storage.py  supabase.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py
backend/tests/models/: test_property.py  test_user.py
mobile/: .env.example  .eslintrc.js  .gitignore  App.tsx  README.md  app.json  babel.config.js  jest.config.js  package.json  tailwind.config.js  tsconfig.json
mobile/app/: _layout.tsx  index.tsx
mobile/app/(app)/: _layout.tsx  favorites.tsx  index.tsx  map-view.tsx  profile.tsx  property-camera.tsx  property-inventory.tsx  saved-properties.tsx  search.tsx  voice-assistant-help.tsx  voice-assistant.tsx
mobile/app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  signup.tsx
mobile/components/ui/: Button.tsx  Card.tsx  Text.tsx  TextInput.tsx
mobile/hooks/: useVoiceAssistant.ts
mobile/src/components/: ErrorBoundary.tsx
mobile/src/config/: index.ts
mobile/src/hooks/: useVoiceAssistant.ts
mobile/src/navigation/: index.tsx
mobile/src/providers/: AuthProvider.tsx  SupabaseProvider.tsx  ThemeProvider.tsx  VoiceAssistantProvider.tsx
mobile/src/screens/: EditProfileScreen.tsx  (+10 more)
mobile/utils/: logger.ts
(+35 files in other folders)
