[tool.poetry]
name = "rivo-backend"
version = "0.1.0"
description = "Backend API for Rivo Real Estate Application"
authors = ["Rivo Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
supabase = "^2.0.3"
httpx = "^0.25.1"
openai = "^1.3.3"
pillow = "^10.1.0"
loguru = "^0.7.2"
structlog = "^23.2.0"
asyncpg = "^0.28.0"
boto3 = "^1.28.78"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.10.1"
ruff = "^0.1.3"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
factory-boy = "^3.3.0"
faker = "^19.13.0"
types-python-jose = "^3.3.0.20240106"
types-passlib = "^1.7.7.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "B", "C4", "SIM", "ERA", "UP"]
ignore = ["E203"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
